--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,5 +1,15 @@
 .footer{
-    height: 40px;
+    background: linear-gradient(to right,  #3402BB 0%, #1A047D 48.96%, #06054B 100%);
+    height: 300px;
     font-size: 16px;
-    background-color: #f8f9fa;
+    color:white;
+}
+
+.footerItem{
+    width: 33.33%!important;
+}
+
+.footerInfoContato{
+    border-bottom: dotted 2px #FFFFFF;
+    padding-bottom: 20px;
 }
