--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,15 +1,16 @@
 .footer{
     background: linear-gradient(to right,  #3402BB 0%, #1A047D 48.96%, #06054B 100%);
-    height: 300px;
     font-size: 16px;
     color:white;
-}
-
-.footerItem{
-    width: 33.33%!important;
+    width: 100%;
+    padding: 2% 2%;
 }
 
 .footerInfoContato{
     border-bottom: dotted 2px #FFFFFF;
     padding-bottom: 20px;
+}
+
+.footer p:last-child {
+    margin: 0;
 }
