Fazendo algumas modificações na primeira seção

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: linear-gradient(to right,  #3402BB 0%, #1A047D 48.96%, #06054B 100%);
+    background: linear-gradient(180deg, #7C63BE 0%, #282694 100%);
     font-size: 16px;
     color:white;
     width: 100%;
