--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,5 +1,5 @@
 .headerNavBar {
-    background: linear-gradient(to right, #3402bb 0%, #1a047d 48.96%, #06054b 100%);
+    background: linear-gradient(304.8deg, #7C63BE 29.5%, #282694 80.89%);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
