--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: linear-gradient(180deg, #7C63BE 0%, #282694 100%);
+    background: #1A2930;
     font-size: 16px;
     color:white;
     width: 100%;
