--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,3 +1,12 @@
+.linksNav{
+    color: inherit;
+    text-decoration: none;
+}
+
+.headerLogo{
+    width: 150px;
+}
+
 .headerNavBar {
     background-color: #0A1612;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
@@ -23,6 +32,16 @@
 
 .headerSearchButton:hover {
     background-color: #C5C1C0;
+}
+
+.linksNav:hover{
+    color: inherit;
+    text-decoration: none;
+}
+
+.headerLogo:hover{
+    transition: 0.1s;
+    filter: invert(77%) sepia(49%) saturate(16%) hue-rotate(325deg) brightness(98%) contrast(76%);
 }
 
 .fa-search {
