Tentando configurar a verificação de usuário

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -4,7 +4,7 @@
 
 .homeSectionOne {
     height: 550px;
-    background-image:url('https://image.freepik.com/vetores-gratis/desenho-de-banner-de-venda-na-sexta-feira-negra-com-carrinho-de-compras_1055-9167.jpg');
+    background-image:url('../imgs/banner.PNG');
     background-repeat:no-repeat;
     background-size:cover;
     border-bottom: solid 2px #0A1612;
