Alteração da navbar
Signed-off-by: Jessica Pimentel <jessikpimentel@hotmail.com>

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,20 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 .linksNav{
     color: inherit;
     text-decoration: none;
 }
 
 .headerLogo{
-    width: 150px;
+    width: 100px;
 }
 
 .headerNavBar {
     background-color: #0A1612;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+    height: 100px;
+    font-family: 'Lilita One', cursive;
 }
 
 .headerNavLink {
-    color: #F7CE3E !important;
-    font-size: 18px;
+    color: #ffffff !important;
+    font-size: 22px;
 }
 
 .headerNavLink:hover {
