--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -13,6 +13,7 @@
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
     height: 100px;
     font-family: 'Lilita One', cursive;
+    margin: 20px solid #0c1a15;
 }
 
 .headerNavLink {
