--- a/src/assets/css/productRegistration.css
+++ b/src/assets/css/productRegistration.css
@@ -2,14 +2,17 @@
   padding: 5% 10%;
 }
 
-.prodRegistration div {
-  background-color: #e7e7e7;
+.prodRegistration .formRegister{
   padding: 1% 2%;
+  background-color: #F7CE3E !important;
+  border-radius: 5px !important;
+
 }
 
 .prodRegistration button {
   width: 33% !important;
 }
+
 
 @media (min-width: 576px) {
   .groupImage {
