--- a/src/assets/css/auth.css
+++ b/src/assets/css/auth.css
@@ -6,6 +6,15 @@
     font-size: 18px;
 }
 
+.profile{
+    color: inherit;
+}
+
+.profile:hover{
+    color: inherit;
+    text-decoration: none;
+}
+
 
 .btn-primary{
     background-color: #F7CE3E!important;
